# rxn-reaction-preprocessing

./: .buildinfo  .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  Dockerfile.preprocess  Dockerfile.split  Dockerfile.tokenize  LICENSE  README.html  README.md  api.html  demo.sh  dev-requirements.txt  docker_entrypoint.sh  download_non_distributed_requirements.sh  environment.yml  genindex.html  index.html  mypy.ini  nodist_requirements_conda.txt  nodist_requirements_pip.txt  non_distributed_requirements.sh  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  requirements_pip_nodeps.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/: pytest.yml
.github/workflows/: black.yml  docs.yaml  pypi.yaml  tests.yaml
_modules/: index.html
_modules/rxn/reaction_preprocessing/: augmenter.html  cleaner.html  config.html  importer.html  main.html  mixed_reaction_filter.html  molecule_standardizer.html  pistachio_record_standardizer.html  preprocessor.html  reaction_standardizer.html  smiles_tokenizer.html  special_tokens.html  stable_data_splitter.html  standardizer.html  utils.html
_modules/rxn/reaction_preprocessing/annotations/: annotation_criterion.html  annotation_info.html  missing_annotation_detector.html  molecule_annotation.html  molecule_replacer.html  rejected_molecules_filter.html
_modules/rxn/reaction_preprocessing/scripts/: annotation_check.html  standardize_pistachio_records.html
_sources/: README.md.txt  api.rst.txt  index.md.txt
data/example/processed/: test.txt
data/example/raw/: rxns-small.txt
data/example1/: pistachio.cansmi.reduced  pistachio.smi.reduced
data/example2/: pistachio.cansmi.reduced
data/standardization-files/: pistachio-200302
data_preprocessor/: PistFilter.py  __init__.py  augmenter.py  mixed_reaction_filter.py  preprocessor.py  reaction.py  reaction_filter.py  reaction_smiles_extractor.py  smiles_tokenizer.py  stable_data_splitter.py  standardizer.py  tokenization.py  utils.py  version.py
data_preprocessor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
doc/data_preprocessor/: index.html  mixed_reaction_filter.html  preprocessor.html  reaction.html  smiles_tokenizer.html  stable_data_splitter.html
docs/: requirements.txt
docs/source/: conf.py
old_for_docker/: Dockerfile  demo.sh
rxn_reaction_preprocessing/: __init__.py  augmenter.py  cleaner.py  config.py  importer.py  main.py  mixed_reaction_filter.py  molecule_standardizer.py  pistachio_record_standardizer.py  preprocessor.py  reaction.py  reaction_standardizer.py  smiles_tokenizer.py  special_tokens.py  stable_data_splitter.py  standardizer.py  stereochemistry_operations.py  utils.py
rxn_reaction_preprocessing/annotations/: annotation_criterion.py  annotation_info.py  missing_annotation_detector.py  molecule_annotation.py  molecule_replacer.py  rejected_molecules_filter.py
rxn_reaction_preprocessing/data/standardization-files/: catalyst-annotation-210428.json  catalyst-annotation-210826.json  catalyst_annotation_210826.json  pistachio-200302.json  pistachio-210428.json
rxn_reaction_preprocessing/scripts/: annotation_check.py  combine_class_token.py  find_missing_annotations.py  standardize_pistachio_records.py
scripts/: PistFilter.py  augment.py  augment_smiles.py  clean_dataset.lsf  example_use_pistfilter.py  extract_missing_annotations.py  filter.py  prepreprocess.py  preprocess.py  remove_atom_mapping_and_fragment_info.py  standardize.py  tokenize.py  tokenize_smiles.py
src/rxn/reaction_preprocessing/: __init__.py  augmenter.py  cleaner.py  config.py  importer.py  main.py  mixed_reaction_filter.py  molecule_standardizer.py  pistachio_record_standardizer.py  preprocessor.py  reaction.py  smiles_tokenizer.py  special_tokens.py  stable_data_splitter.py  standardizer.py  utils.py
src/rxn/reaction_preprocessing/annotations/: annotation_criterion.py  annotation_info.py  missing_annotation_detector.py  molecule_annotation.py  molecule_replacer.py  rejected_molecules_filter.py
src/rxn/reaction_preprocessing/scripts/: annotation_check.py  combine_class_token.py  find_missing_annotations.py  standardize_pistachio_records.py
tests/: _test_stable_splitting.py  test_augmenter.py  test_cleaner.py  test_importer.py  test_mixed_reaction_filter.py  test_molecule_standardizer.py  test_patterns  test_patterns.json  test_pistachio_record_standardizer.py  test_preprocessor.py  test_reaction.py  test_reaction_standardizer.py  test_smiles_tokenizer.py  test_special_tokens.py  test_stable_data_splitter.py  test_stable_splitting.py  test_standardizer.py  test_stereochemistry_operations.py  test_utils.py
tests/annotations/: test_annotation_criterion.py  test_annotation_info.py  test_missing_annotation_detector.py  test_molecule_annotation.py  test_molecule_annotations.json  test_molecule_replacer.py  test_rejected_molecules_filter.py
