[build-system]
requires = ["setuptools >= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "hydra.*",
    "numpy.*",
    "pandas.*",
    "rdkit.*",
    "xxhash.*",
]
ignore_missing_imports = true

[tool.isort]
profile = "black"
