[metadata]
name = rxn-data-preprocessor
version = attr: rxn_reaction_preprocessing.__version__
description = Reaction SMARTS preprocessing tools
author = Alessandra Toniato, Daniel Probst @ IBM
author_email = ato@zurich.ibm.com, dpr@zurich.ibm.com
long_description = file: README.md
license_files = LICENSE
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8,
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >= 3.6
zip_safe = False
packages = find:
install_requires =
    numpy>=1.19.0
    pandas>=1.1.4
    tabulate>=0.8.7
    xxhash>=2.0.0
    click>=7.1.2
scripts =
    bin/rxn-preprocess
    bin/rxn-split
    bin/rxn-tokenize
    bin/rxn-standardize
    bin/rxn-augment

[options.extras_require]
dev =
    flake8>=3.8.4
    mypy>=0.790
    yapf>=0.30.0
    pytest>=6.1.2
    pre-commit>=2.9.2

[yapf]
based_on_style = pep8
blank_line_before_nested_class_or_def = true
indent_dictionary_value = true
dedent_closing_brackets = true
column_limit = 99

[mypy]
no_implicit_optional = true
strict_optional = false
ignore_missing_imports = true
