[metadata]
name = rxn-reaction-preprocessing
version = attr: rxn_reaction_preprocessing.__version__
description = Reaction SMARTS preprocessing tools
author = Alessandra Toniato, Daniel Probst @ IBM
author_email = ato@zurich.ibm.com, dpr@zurich.ibm.com
long_description = file: README.md
license_files = LICENSE
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8,
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >= 3.6
zip_safe = False
packages = find:
include_package_data = true

[options.entry_points]
console_scripts =
    rxn-data-pipeline = rxn_reaction_preprocessing.main:data_pipeline

[options.package_data]
rxn_reaction_preprocessing =
    *.typed
    data/standardization-files/*

[options.extras_require]
dev =
    pylint>=2.6.0
    flake8>=3.8.4
    mypy>=0.790
    yapf>=0.30.0
    pytest>=6.1.2
    pytest-cov>=2.10.1
    pre-commit>=2.9.2
    types-click>=7.1.1
    types-dataclasses>=0.1.4
    types-tabulate>=0.1.0

[yapf]
based_on_style = pep8
blank_line_before_nested_class_or_def = true
indent_dictionary_value = true
dedent_closing_brackets = true
column_limit = 99

[mypy]
ignore_missing_imports = true

[flake8]
extend-ignore = E501
exclude = __init__.py
