[metadata]
name = rxn-reaction-preprocessing
version = attr: rxn.reaction_preprocessing.__version__
description = Reaction preprocessing tools
author = IBM RXN team
author_email = rxn4chemistry@zurich.ibm.com
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/rxn4chemistry/rxn-reaction-preprocessing
project_urls =
    Documentation = https://rxn4chemistry.github.io/rxn-reaction-preprocessing/
    Repository = https://github.com/rxn4chemistry/rxn-reaction-preprocessing
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >= 3.6
zip_safe = False
include_package_data = true
install_requires =
    attrs>=21.2.0
    click>=7.1.2
    hydra-core>=1.1.0
    numpy>=1.16.5
    pandas>=1.1.1
    rxn-chem-utils>=1.0.4
    rxn-utils>=1.1.2
    tabulate>=0.8.7
    xxhash>=2.0.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    rxn-data-pipeline = rxn.reaction_preprocessing.main:data_pipeline
    rxn-combine-class-token = rxn.reaction_preprocessing.scripts.combine_class_token:main
    rxn-standardize-pistachio-records = rxn.reaction_preprocessing.scripts.standardize_pistachio_records:main

[options.package_data]
rxn.reaction_preprocessing =
    *.typed
    data/standardization-files/*

[options.extras_require]
dev =
    black>=22.3.0
    bump2version>=1.0.1
    flake8>=3.8.4
    isort>=5.9.3
    mypy>=0.950
    pre-commit>=2.9.2
    pylint>=2.6.0
    pytest-cov>=2.10.1
    pytest>=6.1.2
    types-click>=7.1.1
    types-dataclasses>=0.1.4
    types-setuptools>=57.4.2
    types-tabulate>=0.1.0
rdkit =
    # install RDKit. This is not as a setup dependency in order not to install it
    # in downstream packages and avoid potential conflicts with the conda
    # installation of RDKit
    rdkit>=2022.3.3

[flake8]
extend-ignore = E501
exclude = __init__.py
